--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,14 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center" android:background="#ffffff">
+    android:layout_height="match_parent" android:background="#FFFFFF">
 
-    <fragment
-        android:name="gianfranco.progettomonk.FragmentBtnCamera"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/main_fragment"/>
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_logo_qrcode"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/main_logo_imageview"
+        android:layout_marginTop="100dp"
+        android:layout_marginBottom="50dp"/>
+    <LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal" android:gravity="center_horizontal" android:layout_below="@id/main_logo_imageview">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/register"
+            style="@style/Base.Widget.AppCompat.Button.Borderless"
+            android:textColor="@color/black"
+            android:layout_below="@id/main_logo_imageview"
+            android:id="@+id/main_register_btn"/>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="@style/Base.Widget.AppCompat.Button.Borderless"
+            android:text="@string/login"
+            android:textColor="@color/black"
+            android:layout_below="@id/main_logo_imageview"
+            android:layout_toRightOf="@id/main_register_btn"
+            android:id="@+id/main_login_btn"/>
+
+    </LinearLayout>
 
 
-</LinearLayout>
+
+
+</RelativeLayout>
