--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,43 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:background="@color/white"
-    android:paddingTop="56dp"
+    android:layout_height="match_parent" android:background="@drawable/qrcode_sfondo"
+    android:paddingTop="30dp"
     android:paddingLeft="24dp"
     android:paddingRight="24dp">
 
     <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="115dp"
+        android:layout_height="110dp"
+        android:layout_gravity="center_horizontal"
+        android:src="@drawable/ic_logo_qrcode2"
+        android:layout_marginBottom="10dp"/>
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_logo_qrcode"
-        android:layout_gravity="center_horizontal"/>
+        android:text="Hai già un account"
+        android:textColor="@color/white"
+        android:layout_gravity="center_horizontal"
+        android:textSize="17dp"
+        android:layout_marginBottom="20dp"/>
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp">
+        android:layout_marginBottom="5dp"
+        android:hint="Email">
         <EditText
+            android:drawableLeft="@drawable/ic_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/email"
-            android:textColorHint="@color/black"
+            android:textColorHint="@color/white"
             android:inputType="textEmailAddress"
             android:textColor="@color/black"
-            android:id="@+id/login_username_ET"/>
+            android:id="@+id/login_username_ET" />
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        >
+        android:layout_marginBottom="40dp"
+        android:hint="@string/password">
             <EditText
+                android:drawableLeft="@drawable/ic_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/password"
-                android:textColorHint="@color/black"
+                android:textColorHint="@color/white"
                 android:inputType="textPassword"
                 android:textColor="@color/black"
                 android:id="@+id/login_psw_ET"/>
@@ -48,19 +58,47 @@
         android:layout_height="wrap_content"
         android:text="@string/login"
         android:textColor="@color/black"
-        android:background="@color/zxing_possible_result_points"
-        android:id="@+id/login_login_btn"/>
+        android:background="@color/giallo"
+        android:id="@+id/login_login_btn"
+        android:layout_marginBottom="10dp"
+        android:textSize="18dp"/>
 
-    <TextView
+    <android.support.v7.widget.AppCompatButton
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/black"
-        android:id="@+id/login_register_btn"
-        android:text="@string/login_register"
-        android:gravity="center_horizontal"
-        android:textSize="16dip"
-        android:layout_margin="10dp" />
+        android:text="@string/pswDimenticata"
+        android:textColor="@color/white"
+        android:id="@+id/login_psw_dimenticata_btn"
+        android:textAllCaps="false"
+        android:background="@color/zxing_transparent"
+        android:textSize="15dp"
+        android:textStyle="normal"
+        android:layout_marginBottom="20dp"/>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Oppure"
+            android:textColor="@color/white"
+            android:textSize="16dp"/>
+
+        <TextView
+            android:id="@+id/login_register_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:gravity="center_horizontal"
+            android:text="@string/login_register"
+            android:textColor="@color/giallo"
+            android:textSize="16dp" />
+
+    </LinearLayout>
 
 
 </LinearLayout>
