--- a/app/src/main/res/layout/fragment_for_webview.xml
+++ b/app/src/main/res/layout/fragment_for_webview.xml
@@ -5,8 +5,8 @@
     android:gravity="center">
 
     <WebView
-        android:layout_width="match_parent"
-        android:layout_height="280dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:id="@+id/fragment_web_view"
         ></WebView>
 
