--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -3,14 +3,15 @@
     android:layout_width="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:background="@color/blu">
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" android:gravity="center">
+        android:layout_height="match_parent" >
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_logo_qrcode_header"/>
-    </LinearLayout>
+            android:src="@drawable/ic_logo_qrcode_header"
+            android:layout_centerHorizontal="true"/>
+    </RelativeLayout>
 
 </android.support.v7.widget.Toolbar>
