--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -8,13 +8,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/blu" android:gravity="center"
-        android:paddingTop="30dp">
+        android:paddingTop="30dp"
+        android:weightSum="1">
         <ImageView
-            android:layout_width="187dp"
-            android:layout_height="112dp"
-            android:src="@drawable/ic_logo_qrcode2"
+            android:layout_width="wrap_content"
+            android:layout_height="96dp"
+            android:src="@drawable/ic_logo_ciclope_splash"
             android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="15dp" />
+            android:layout_marginBottom="15dp"
+            android:layout_weight="0.26" />
 
     </LinearLayout>
 
@@ -33,6 +35,7 @@
         android:hint="@string/email"
         android:textColorHint="@color/grigio">
         <EditText
+            android:text="salvatore.zuardi@gmail.com"
             android:drawableLeft="@drawable/ic_email_black"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -50,6 +53,7 @@
         android:hint="@string/password"
         android:textColorHint="@color/grigio">
         <EditText
+            android:text="1234567890"
             android:drawableLeft="@drawable/ic_password_black"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -67,6 +71,7 @@
         android:hint="@string/password"
         android:textColorHint="@color/grigio">
         <EditText
+            android:text="1234567890"
             android:drawableLeft="@drawable/ic_password_black"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
