--- a/app/src/main/res/layout/splash_screen.xml
+++ b/app/src/main/res/layout/splash_screen.xml
@@ -6,7 +6,7 @@
 
     <ImageView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_logo_qrcode2"/>
+        android:layout_height="80dp"
+        android:src="@drawable/ic_logo_ciclope_splash"/>
 
 </LinearLayout>
