--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -8,9 +8,9 @@
         android:layout_height="match_parent" >
 
         <ImageView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_logo_qrcode_header"
+            android:src="@drawable/ic_logo_ciclope"
             android:layout_centerHorizontal="true"/>
     </RelativeLayout>
 
